--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#features16-5">Sobre Nós</a></li>
-                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#features13-4">Sistema Fotovoltaido</a></li>
+                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#features13-4">Sistema Fotovoltaico</a></li>
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#gallery3-8">Serviços</a>
                     </li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#clients1-9">Parceiros</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#contacts3-a">Contato</a></li></ul>
                 <div class="icons-menu">
