--- a/faleconosco.html
+++ b/faleconosco.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section data-bs-version="5.1" class="header6 cid-tQVeRjJN7Z mbr-fullscreen mbr-parallax-background" id="header6-19">
+<section data-bs-version="5.1" class="header6 cid-tQVeRjJN7Z mbr-parallax-background" id="header6-19">
 
     
 
@@ -145,7 +145,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler mx-auto" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Zhj1PCpKjofeNZ+w8hwIEq5PVAkBuNGJQ+Hm9AYX1A4HZBVxQGPWrOmMh48FCak1JCzLRqX9vGBfnlo4kug46lVa9asXhRNi1Asp53hjSAYhmb/HJtZyhiOpoNfnAwb6">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler mx-auto" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="qNg11vlBiaCvJCv7MsPkZFFdJnJL1Shdc92CakNpRRgXtUcuNN3KkvIuKlFqYxNxabltfF3yoU4O7jxHx+ZMiXjdfNb9QWpF9EN/rKXrOEONnVGjAl6wFmdttsDv2W7d">
                     <p class="mbr-text mbr-fonts-style align-center mb-4 display-7">
                         Caso tenha alguma dúvida, comentário, sugestão, entre em contato conosco. Nossa equipe de atendimento ao cliente está pronta para ajudar.
                     </p>
@@ -226,7 +226,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2969853" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/web-design-program.html">Web Design Program</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2969853" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/landing-page-builder.html">Landing Page Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
   <input name="animation" type="hidden">
